--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "redux-persist": "^6.0.0",
+    "vercel": "^37.14.0",
     "vite-express": "*"
   },
   "devDependencies": {
