--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,15 @@
 {
+  "version": 2,
   "builds": [
     {
-      "src": "src/server/index.js",
+      "src": "src/server/main.js",
       "use": "@vercel/node"
-    },
-    {
-      "src": "dist/**/*",
-      "use": "@vercel/static"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "src/server/index.js"
+      "dest": "src/server/main.js"
     }
   ]
 }
